Fix tableofcontents `::before` spacing

--- a/themes/starter-garden/assets/css/03-components/tableofcontents.css
+++ b/themes/starter-garden/assets/css/03-components/tableofcontents.css
@@ -46,6 +46,7 @@
         margin-bottom: 0;
         padding-top: var(--space-m);
         padding-bottom: var(--space-m);
+        padding-left: 0;
 
         @media (min-width: 768px) {
            margin-bottom: var(--space-m); 
@@ -65,6 +66,8 @@
     ul li::before,
     [data-name="related-list-item"]::before {
         content: "\273B";
+        position: relative;
+        top: 0;
         color: var(--colour-accent);
         margin-left: var(--space-xs);
         margin-right: var(--space-xs);
